# hw-rtsa-sdk.rs

./: .gitignore  Cargo.toml  Dockerfile  build.rs  hw_api_tree.json  hw_api_tree.txt  nginx.conf
handler-derive/: Cargo.toml
handler-derive/src/: lib.rs  register.rs
hw-cloud-schema/: Cargo.toml  build.rs
hw-rtsa-sdk-sys/: Cargo.toml  build.rs
hw-rtsa-sdk-sys/cpp/: .gitignore  CMakeLists.txt
hw-rtsa-sdk-sys/cpp/hw-rtsa-sdk/include/: HRTSAEngineParam.h  IHRTSAEngineInternal.h  IHRTSAEventHandler.h  IHRTSAEventHandlerInternal.h  IHRTSATestEnv.h  IHRTSATransportEngine.h  basetype.h
hw-rtsa-sdk-sys/cpp/hw-rtsa-sdk/lib/: libx264hw.so.155
hw-rtsa-sdk-sys/cpp/hw-rtsa-sdk/lib/nk-grs/grs-user/config/: grs_sdk_server_config.json
hw-rtsa-sdk-sys/cpp/hw-rtsa-sdk/lib/nk-grs/grs-user/router/: grs_sdk_global_route_config_hwrtc.json  grs_sdk_global_route_config_rtcha.json
hw-rtsa-sdk-sys/cpp/hw-rtsa-sdk/src/: ffi.cpp
hw-rtsa-sdk-sys/cpp/include/: ffi.h
hw-rtsa-sdk-sys/cpp/src/: ffi.cpp
hw-rtsa-sdk-sys/hw-rtsa-sdk/include/: IHRTSAEngine.h  IHRTSAEventHandler.h  hw264enc.h
hw-rtsa-sdk-sys/hw-rtsa-sdk/lib/nk-grs/grs/config/: grs_sdk_server_config.json
hw-rtsa-sdk-sys/src/: lib.rs
src/: engine.rs  handler.rs  join_param.rs  lib.rs  main.rs  param.rs  utils.rs
src/manager/: assets.rs  context.rs  cslr.rs  mod.rs  reqwest_context.rs  room.rs  test.rs
src/signer/: mod.rs
