[package]
name = "hw-rtsa-sdk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hw-rtsa-sdk"
path = "src/main.rs"

[lib]
name = "hw_rtsa_sdk"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
http = ["dep:reqwest"]

[dependencies]
tokio-stream = "0.1.14"
thiserror = "1.0"
url = { version = "2.5.0", features = [] }
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
chrono = "0.4.19"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.hw-rtsa-sdk-sys]
path = "hw-rtsa-sdk-sys"

[dependencies.reqwest]
version = "0.11"
optional = true

[dev-dependencies]
serde_json = { version = "1.0.64" }
serde = { version = "*", features = ["derive"] }
